# chippy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  install.bash  test.c
.circleci/: config.yml
common/: CMakeLists.txt
common/include/: debug.h  instructions.h  loader.h  rom.h
common/src/: instructions.c  loader.c  rom.c
disassembler/: CMakeLists.txt
docs/: chip8.md
emulator/: CMakeLists.txt
emulator/include/: chip8.h  error.h  gui.h  rom.h
emulator/src/: chip8.c  error.c  gui.c  main.c  rom.c
scripts/: install.bash
tests/: CMakeLists.txt
